--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "openai>=2.20.0",
     "peft>=0.18.1",
     "pydantic>=2.0.0",
+    "python-dotenv>=1.2.1",
     "transformers>=4.57.6",
     "trl>=0.28.0",
     "vllm>=0.15.1",
